# wordle-solver

./: .gitignore  Cargo.toml
crates/grouper/: Cargo.toml
crates/grouper/src/: main.rs
data/: legal-words.txt
data/games/: no-weighting.txt  prune.txt  weighting.txt
data/words/: legal-words-with-counts.txt
solver-cli/: Cargo.toml
solver-cli/src/: main.rs
src/: correctness.rs  guesser.rs  lib.rs  logger.rs  main.rs
src/algorithms/: cutoff.rs  less_allocs.rs  mod.rs  naive.rs  once_init.rs  precalc.rs  prune.rs  vec_dict.rs  weight.rs
src/correctness/: mod.rs  tests.rs
src/guess/: mod.rs  tests.rs
src/guesser/: mod.rs  tests.rs
src/guessers/: mod.rs  schnose.rs
src/wordle/: iter.rs  macros.rs  mod.rs
wordle/: Cargo.toml
wordle/src/: lib.rs
