[package]
name = "wordle"
version = "0.1.0"
edition = "2021"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]

[profile.release]
debug = true

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
clap = { version = "4.3.0", features = ["derive"] }

itertools = "0.10.5"
hashbrown = "0.13.2"
lazy_static = "1.4.0"
